--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -88,7 +88,7 @@
               {% comment %}
               custom code start
               {% endcomment %}
-              {% if line_item contains "coffee" %}
+              {% if cart.items contains "coffee" %}
 
                 HEllo
               {% else %}
