--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -88,26 +88,26 @@
               {% comment %}
               custom code start
               {% endcomment %}
-              {% if cart.items contains "coffee" %}
+              {% if line_item.product.title "coffee" %}
 
                 HEllo
-            {% else %}
+              {% else %}
 
 
                 {% comment %}
                 custom code end
-
-                <scroll-carousel
-                selector=".horizontal-product"
-                id="{{ carousel_id }}"
-                class="horizontal-product-list-carousel {% unless horizontal_products_blends %}separate{% endunless %} scroll-area bleed">
-                <div class="horizontal-product-list {% if horizontal_products_blends %}divide-x{% else %}separate{% endif %}">
-                {%- for recommended_product in section.settings.products -%}
-                {%- render 'horizontal-product', product: recommended_product, show_add_to_cart: true, background: section.settings.product_card_background, text_color: section.settings.product_card_text_color -%}
-                {%- endfor -%}
-                </div>
-                </scroll-carousel>
                 {% endcomment %}
+                <scroll-carousel
+                  selector=".horizontal-product"
+                  id="{{ carousel_id }}"
+                  class="horizontal-product-list-carousel {% unless horizontal_products_blends %}separate{% endunless %} scroll-area bleed">
+                  <div class="horizontal-product-list {% if horizontal_products_blends %}divide-x{% else %}separate{% endif %}">
+                    {%- for recommended_product in section.settings.products -%}
+                      {%- render 'horizontal-product', product: recommended_product, show_add_to_cart: true, background: section.settings.product_card_background, text_color: section.settings.product_card_text_color -%}
+                    {%- endfor -%}
+                  </div>
+                </scroll-carousel>
+
               {% endif %}
             </div>
           </div>
