--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -167,9 +167,9 @@ Supported variables
   {%- endcomment -%}
 
   <div class="product-card__info  {% if text_alignment == 'center' %}product-card__info--center{% endif %}">
-    {% if product.metafields.custom.productcardtagtext != blank %}
-      <div class="cardtagtext" style="background: {{ settings.product_tag_color }};">{{ product.metafields.custom.productcardtagtext }}</div>
-    {% endif %}
+    {% if product.metafields.custom.productcardtagtext != blank %}{% endif %}
+    <div class="cardtagtext" style="background: {{ settings.product_tag_color }};">{{ product.metafields.custom.productcardtagtext }}</div>
+
     {%- if show_vendor and product.vendor != blank -%}
       {%- if show_rating and text_alignment != 'center' -%}
         <div class="rating-with-text w-full">
