--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -45,15 +45,18 @@
 
       {% assign line_item = "" %}
 
+
       <div class="v-stack gap-6 sm:gap-8">
+
         <div class="cart-drawer__line-items">
           {%- for line_item in cart.items -%}
             {%- render 'line-item', line_item: line_item, show_desktop_quantity: true -%}
             {% assign line_item = {{ line_item.product.title | default: line_item.title }} %}
           {%- endfor -%}
+          {{ line_item }}hello_world
         </div>
-        ////////////////
-        {{ line_item }}
+
+
         {%- if section.settings.products.count > 0 -%}
           <div class="cart-drawer__recommendations">
             <div class="v-stack gap-2.5 sm:gap-4">
