--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -58,7 +58,7 @@
 
         {% if line_item contains "coffee" %}
 
-          we have done it
+          <div>We have done</div>
 
         {% endif %}
 
