--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -56,7 +56,7 @@
         </div>
         {{ line_item }}
 
-        {% if line_item contains "coffee" %}
+        {% if line_item contains "Coffee" %}
 
           <div>We have done</div>
 
