--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -47,7 +47,7 @@
         <div class="cart-drawer__line-items">
           {%- for line_item in cart.items -%}
             {%- render 'line-item', line_item: line_item, show_desktop_quantity: true -%}
-            {% if line_item.product.title contains "Coffee" %}
+            {% if line_item.product.title contains "Coffee" or line_item.product.title contains "coffee" %}
 
               {% assign line_item = true %}
 
@@ -57,7 +57,7 @@
 
 
         </div>
-        {{ line_item }}
+
 
         {% if line_item == true %}
 
