--- a/snippets/products-imageinfo.liquid
+++ b/snippets/products-imageinfo.liquid
@@ -415,7 +415,7 @@
   <div class="bundle-summary">
     <div class="bundle-summry-title">YOUR SELECTIONS
       <span>0</span>
-      {{ product.custom.custombox }}
+      {{ product.metafields.custom.custombox }}
     </div>
   </div>
   {%- comment -%}
