--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -68,7 +68,7 @@
         </reveal-items>
       </scroll-carousel>
 
-      {%- if section.settings.stack_products == true -%}
+      {%- if section.settings.stack_products == false -%}
         {%- if section.settings.show_progress_bar -%}
           {%- assign default_progress = section.settings.products_per_row_desktop | times: 1.0 | divided_by: section.settings.products_count -%}
           {%- render 'scrollbar', observes: scroll_area_id, default_progress: default_progress, show_buttons: true -%}
