--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -14,6 +14,10 @@
   </style>
 {%- endif -%}
 
+<div>
+  hello
+</div>
+
 <div class="footer">
   <div class="container">
     <div class="footer__wrapper">
