--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -15,7 +15,11 @@
 {%- endif -%}
 
 <div>
-  hello
+  <img
+    class="load_footer_logo"
+    loading="lazy"
+    style="max-width:50%; width:100px; height:100px;"
+    src="//cdn.shopify.com/s/files/1/0301/1923/1620/files/LOGO_1_24b6838e-3f38-4fa4-ab44-a14f3aa42c64_300X.png?v=1639483678">
 </div>
 
 <div class="footer">
