--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -15,7 +15,7 @@
 {%- endif -%}
 
 <div class="logo_img">
-  {{ section.settings.logo }}
+  <a href="{{ routes.root_url }}" class="header__logo">{{ logo_content }}</a>
 </div>
 
 <div class="footer">
