--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -15,7 +15,7 @@
 {%- endif -%}
 
 <div class="logo_img">
-  <a href="{{ routes.root_url }}" class="header__logo">{{ logo_content }}</a>
+  <img src="https://cdn.shopify.com/s/files/1/0024/6759/4339/files/logo1.png">
 </div>
 
 <div class="footer">
