--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -15,7 +15,7 @@
 {%- endif -%}
 
 <div class="logo_img">
-  <img src="https://cdn.shopify.com/s/files/1/0024/6759/4339/files/logo1.png">
+  <img style="max-width:50%; width:100px; height:100px;" src="https://cdn.shopify.com/s/files/1/0024/6759/4339/files/logo1.png">
 </div>
 
 <div class="footer">
