--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -13,10 +13,14 @@
     }
   </style>
 {%- endif -%}
+{% comment %}
+
 
 <div class="logo_img">
-  <img style="max-width:50%; width:300px;" src="https://cdn.shopify.com/s/files/1/0024/6759/4339/files/logo1.png">
+<img style=" width:300px;" src="https://cdn.shopify.com/s/files/1/0024/6759/4339/files/logo1.png">
 </div>
+
+{% endcomment %}
 
 <div class="footer">
   <div class="container">
