--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -364,9 +364,7 @@
         <div class="product-info__offer-list">
         {% else %}
 
-          .product-info__offer-list {
-          display: none;
-          }
+          <div class="product-info__offer-list" style="display: none;">
         {%- endif -%}
 
         {%- if block.settings.title != blank or block.settings.content != blank -%}
